# Cachedemo

./: CMakeLists.txt  README.md
include/: ARCCache.h  FIFOCache.h  LFUCache.h  LRUCache.h
src/: ARCCache.h  ARCCache.tpp  Cachepolicy.h  FIFOCache.h  FIFOCache.tpp  LFUCache.h  LFUCache.tpp  LRUCache.h  LRUCache.tpp
test/: test_cache.cpp
